--- a/src/app/data-store/signup/signup.component.css
+++ b/src/app/data-store/signup/signup.component.css
@@ -34,6 +34,10 @@ form input {
     margin: 20px 0px;
 }
 
+input.ng-invalid.ng-touched {
+    border: 1px solid red;
+}
+
 .save {
     width: 100%;
     cursor: pointer;
